add server sided ugoira conversion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ rustls = "0.20"
 rustls-native-certs = "0.6"
 lazy_static = "1.4"
 chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
+# ugoira
+zip = { version = "0.6.2", default-features = false }
+png = "0.17.2"
+image = { version = "0.24.1", default-features = false, features = ["png", "jpeg"] }
 
 [build-dependencies]
 grass = "0.10.8"
