--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ lazy_static = "1.4"
 chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
 # ugoira
 zip = { version = "0.6.2", default-features = false }
-image = { version = "0.24.1", default-features = false, features = ["png", "jpeg"] }
+libc = "0.2"
 
 [build-dependencies]
+cc = "1.0"
 grass = "0.10.8"
 glob = "0.3.0"
