--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
 # ugoira
 zip = { version = "0.6.2", default-features = false }
 libc = "0.2"
+rss = "2.0"
 
 [build-dependencies]
 cc = "1.0"
