--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,15 @@ rustls = "0.20"
 rustls-native-certs = "0.6"
 lazy_static = "1.4"
 chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
-# ugoira
-zip = { version = "0.6.2", default-features = false }
-libc = "0.2"
 rss = "2.0"
+# ugoira
+zip = { version = "0.6.2", default-features = false, optional = true }
+libc = { version = "0.2", optional = true }
 
 [build-dependencies]
-cc = "1.0"
+cc = { version = "1.0", optional = true }
 grass = "0.11"
 glob = "0.3"
+
+[features]
+ugoira = ["dep:zip", "dep:libc", "dep:cc"]
