--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ ureq = { version = "2.4", features = ["json", "tls", "rustls"] }
 percent-encoding = "2.1"
 rustls = "0.20"
 rustls-native-certs = "0.6"
-lazy_static = "1.4"
 chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
 rss = "2.0"
 # ugoira
@@ -27,3 +26,9 @@ glob = "0.3"
 
 [features]
 ugoira = ["dep:zip", "dep:libc", "dep:cc"]
+
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
+opt-level = "z"
