--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ maud = { git = "https://github.com/lambda-fairy/maud", features = ["actix-web"] 
 percent-encoding = "2.1"
 rustls = "0.20"
 rustls-native-certs = "0.6"
-chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
+chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde"] }
 rss = "2.0"
 # ugoira
 zip = { version = "0.6.2", default-features = false, optional = true }
