--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 pico-args = "0.5"
-actix-web = { version = "4.0", default-features = false, features = ["macros"] }
+actix-web = { version = "4.0", default-features = false, features = ["macros", "cookies"] }
 awc = { version = "3.0", default-features = false, features = ["compress-gzip", "rustls"] }
 tokio = { version = "*", features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
