revert back to sync rouille + ureq

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,11 @@ edition = "2021"
 
 [dependencies]
 pico-args = "0.5"
-actix-web = { version = "4.0", default-features = false, features = ["macros", "cookies"] }
-awc = { version = "3.0", default-features = false, features = ["compress-gzip", "rustls"] }
-tokio = { version = "*", features = ["macros"] }
+rouille = { version = "3.5", default-features = false }
+ureq = { version = "2.4", features = ["json", "tls", "rustls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-maud = { git = "https://github.com/lambda-fairy/maud", features = ["actix-web"] }
+maud = "0.24"
 percent-encoding = "2.1"
 rustls = "0.20"
 rustls-native-certs = "0.6"
