--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ phf = { version = "0.11.2", features = ["phf_macros", "macros"] }
 cc = { version = "1.0", optional = true }
 grass = { version = "0.13", default-features = false }
 glob = "0.3"
+vcpkg = "0.2.15"
 
 [features]
 ugoira = ["dep:zip", "dep:libc", "dep:cc"]
@@ -33,3 +34,8 @@ strip = true
 lto = true
 codegen-units = 1
 opt-level = "z"
+
+[package.metadata.vcpkg]
+dependencies = ["ffmpeg[x264]:x64-windows-static-md"]
+git = "https://github.com/microsoft/vcpkg"
+rev = "943c5ef"
